# Embedded-Term-Project

./: .gitignore  .gitmodules  README.md
embedded-user/: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
embedded-user/dep/bcm2835/: bcm2835.c
embedded-user/src/: main.cpp  user_main.h
embedded-user/src/config/: config_changed_i.h  config_manager.h
embedded-user/src/data_source/: data_source_controller.h  data_source_dummy.h  data_source_type.h  data_source_utility.h  mux_controller.cpp  mux_controller.h
embedded-user/src/file_manager/: file_manager.h
embedded-user/src/qt-frontend/: CMakeLists.txt  def_data_source.h  def_reflection.h  qmain.cpp  reflection_def  user_main_wrapper.cpp  user_main_wrapper.h
embedded-user/src/qt-frontend/window/: add_source_to_record.cpp  add_source_to_record.h  add_source_to_record.ui  main_window.cpp  main_window.h  main_window.ui  points_view.cpp  points_view.h  points_view.ui
embedded-user/src/source_to_stream/: source_to_stream_base.cpp  source_to_stream_base.h  source_to_stream_dummy.h
embedded-user/src/stream_to_record/: record_receive_i.h  record_writer_base.h  stream_to_record_base.h  stream_to_record_dummy.h
embedded-user/src/user/: CMakeLists.txt  user_main.h
embedded-user/src/user/config/: config_change.h  config_changed_i.h  config_manager.h  config_struct.h
embedded-user/src/user/data_source/: bcm2835_wrapper.h  data_source_base.h  data_source_controller.h  data_source_dummy.h  data_source_i2c.cpp  data_source_i2c.h  data_source_utility.h  mux_controller.cpp  mux_controller.h
embedded-user/src/user/file_manager/: file_manager.h
embedded-user/src/user/source_to_stream/: source_to_stream_base.cpp  source_to_stream_base.h  source_to_stream_dummy.h  source_to_stream_i2c_demo.h
embedded-user/src/user/stream_to_record/: record_receive_i.h  record_writer_base.h  record_writer_dummy.h  stream_to_record_base.h  stream_to_record_dummy.h
embedded-user/src/user/utils/: interface_register.hpp  owner_compare.hpp  system_clock.hpp
embedded-user/src/user/web_interface/: realtime_data.h
embedded-user/src/utils/: owner_compare.hpp  system_clock.hpp
embedded-user/test/: CMakeLists.txt  test_data_source.cpp  test_stream_to_record.cpp  test_user_main.cpp
